# SIP

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/core/: engine.hpp  event_loop.hpp  scheduler.hpp  storage.hpp
include/modules/: behavior_dna.hpp  file_decay.hpp  process_mapper.hpp  state_diff.hpp  thermal_scheduler.hpp
include/os/: os_layer.hpp
include/sip/core/: engine.hpp  event_loop.h  event_loop.hpp  scheduler.h  scheduler.hpp  storage.h  storage.hpp
include/sip/export/: json_snapshot.hpp
include/sip/modules/: behavior_dna.h  behavior_dna.hpp  file_decay_tracker.h  file_decay_tracker.hpp  process_dep_mapper.h  process_dep_mapper.hpp  state_diff.h  state_diff.hpp  thermal_scheduler.h  thermal_scheduler.hpp
include/sip/os/: os_abstraction.h  os_layer.hpp
include/sip/ui/: dashboard.hpp
include/ui/: dashboard.hpp  log_sink.hpp
src/: CMakeLists.txt  main.cpp
src/core/: engine.cpp  event_loop.cpp  scheduler.cpp  storage.cpp
src/modules/: behavior_dna.cpp  file_decay.cpp  process_mapper.cpp  state_diff.cpp  thermal_scheduler.cpp
src/modules/behavior_dna/: behavior_dna.cpp
src/modules/file_decay/: file_decay_tracker.cpp
src/modules/process_mapper/: process_dep_mapper.cpp
src/modules/state_diff/: state_diff.cpp
src/modules/thermal_scheduler/: thermal_scheduler.cpp
src/os/: os_layer.cpp
src/os/platform/: linux.cpp  macos.cpp  windows.cpp
src/ui/: dashboard.cpp
tests/: CMakeLists.txt  test_behavior_dna.cpp  test_event_loop.cpp  test_file_decay.cpp  test_os_layer.cpp  test_process_mapper.cpp  test_scheduler.cpp  test_state_diff.cpp  test_storage.cpp  test_thermal_scheduler.cpp
tools/: csv_diff_viewer.cpp  csv_diff_viewer.html
